# wrustblog

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: content.rs  errors.rs  main.rs  pack.rs  templates.rs
src/serve/: middleware.rs  mod.rs
tests/: cli.rs  expected-home copy.html  expected-post.html
tests/blog/content/: blog.md
tests/blog/content/posts/: post-1.md
tests/blog/templates/: index.html  post.html
tests/blog/templates/assets/: dark.css  light.css  main.css
