[package]
name = "wrustblog"
version = "0.0.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
ramhorns = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9.2"
gray_matter = "0.2.4"
serde_json = "1.0.87"
chrono = "0.4"
wruster = { git = "https://github.com/manelmontilla/wruster.git", tag = "0.0.10" }
log = "0.4.14"
mime_guess = "2.0.3"
simplelog = "0.12.0"
mime = "0.3.16"
regex = "1.8.1"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
ureq = "2.8.0"
